@@ -176,10 +176,11 @@ line</A>.</p>
 <H4>List of Documents</H4>
 <ul>
 <li><A HREF="quickstart.html">Quick Start</A></li>
-<li><A HREF="dataLoading.html">How to load data</A></li>
-<li><A HREF="ibisCommandLine.html">How to use ibis command line tool</A></li>
+<li><A HREF="dataLoading.html">Loading data</A></li>
+<li><A HREF="ibisCommandLine.html">Ibis command line tool</A></li>
 <li><A HREF="indexSpec.html">Index Specification</A></li>
-<li><A HREF="dataDistributions.html">How to compute data distribution</A></li>
+<li><A HREF="rara.html">Example client code</A></li>
+<li><A HREF="dataDistributions.html">Compute data distribution</A></li>
 <li><A HREF="html/index.html">Reference Guide</A>
  [<A HREF="refman.pdf">in a single PDF file</A>]:
 <ul>
